--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,18 +24,20 @@
     {% include footer.html %}
 
 
-    <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+  <!--//disqus  begin-->
   <script type="text/javascript">
-    var duoshuoQuery = {short_name:"hygblog"};
-    (function() {
-      var ds = document.createElement('script');
-      ds.type = 'text/javascript';ds.async = true;
-      ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-      ds.charset = 'UTF-8';
-      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ds);
-    })();
-  </script>
-<!-- 多说公共JS代码 end -->
+    /* * * CONFIGURATION VARIABLES * * */
+    var disqus_shortname = 'huqitao';
+    
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
+  <!--//disqus  end-->
 
 <!-- 在新窗口中打开 -->
   <script type="text/javascript">
