--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,8 +13,28 @@ layout: default
         {{content}}
       </article>
       <hr>
-      <div class="bdsharebuttonbox"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_douban" data-cmd="douban" title="分享到豆瓣网"></a><a href="#" class="bds_fbook" data-cmd="fbook" title="分享到Facebook"></a><a href="#" class="bds_copy" data-cmd="copy" title="分享到复制网址"></a></div>
-      <script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"24"},"share":{}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
+
+      <!-- <div style="clear:both;display:block"> -->
+        
+        <!-- JiaThis Button BEGIN -->
+        <!-- <div class="jiathis_style_32x32" style="">
+        <a class="jiathis_button_weixin"></a>
+        <a class="jiathis_button_tsina"></a>
+        </div> -->
+        
+      <!-- </div> -->
+        
+        <!-- JiaThis Button END 
+
+      <script type="text/javascript" >
+        var jiathis_config={
+          data_track_clickback:true,
+          summary:"",
+          shortUrl:false,
+          hideMore:true
+        }
+        </script>
+        <script type="text/javascript" src="http://v3.jiathis.com/code_mini/jia.js?uid=2071941" charset="utf-8"></script>-->
     </div>
     <div class="post-area post comment">
       <!-- disqus评论框 start -->
